syntax = "proto3";

package ranks;

message RankData {
    string userId = 1;
    string rankedById = 2;
    string type = 3;
    int32 stars = 4;
    string comment = 5;
}

message Response {
    bool success = 1;
    string message = 2;
    string id = 3;
}

message Query {
    string userId = 1;
    string rangerId = 2;
    string type =3;
    int32 stars = 4;
    string commentPattren = 5;
    int32 skip = 6;
    int32 take = 7;
}

message RanksResponse {
    bool success = 1;
    string message = 2;
    repeated RankData ranks = 3;
}

service Ranks {
    rpc AddRank (RankData) returns (Response);
    rpc GetRanks (Query) returns (RanksResponse);
}